Revision history for Perl extension Promises

0.95_TRIAL 2017-08-19

  [ENHANCEMENTS]
  - add support for IO::Async. (GH#62)
  - add Mojo::UserAgent example (GH#56, powerman)
  - add $WARN_ON_UNHANDLED_REJECT. (GH#37, ruz)
  - add `is_done` predicate. (GH#45, yanick)
  - add `chain` method. (GH#47, yanick)
  - add methods `resolved`, `rejected` and `deferred` now accept a coderef.
    (GH#50, yanick)
  - allows non-promises in 'collect'. (GH#53, yanick)

  [BUG FIXES]
  - fix case where exception exists but is false. (GH#48, stuckdownawell)

  [DOCUMENTATION]
  - doc fix from Amelia Ireland (RT#107559)
  - fix typos in docs (GH#43, yanick)
  - POD fixes. (GH#39, hatorikibble) 
  - fix Mojo example (GH#41, InfinityGone)

  [MISC]
  - skip tests if AnyEvent is not installed (GH#42, yanick)
  - add a META.json (GH#40, hatorikibble)
  - README.md improvement. (GH#51, Andy Kogut + yanick)

0.94 Monday, December 29, 2014
  - fixing the other side of the AutoPrereqs 
    issue, which is actually making sure that
    test runs succeed if you do not have those
    pre-reqs, again, sorry about this.

0.93 Wednesday, April 9th, 2014
  - fix the AutoPrereqs issue so that EV,
    AE, AnyEvent and Mojo::IOLoop are not
    required anymore, sorry about that.

0.92 Wednesday, April 9th, 2014
  - just a quick update to make Mojo::IOLoop
    recommended instead of required.

0.91 Wednesday, March 19th, 2014
  - fixed issue with re-resolved promises
    not working correctly
      - thanks to Gregory Oschwald for the bug
      - thanks to Clinton Gormley for the fix
      - github issue #28 & #29
  - thanks to Sean Zellmer for some typo fix

0.90 Saturday, Feb. 8th, 2014
    !! ----------------------------------- !!
    !!   BACKWARDS COMPATIBILITY WARNING   !!
    !! ----------------------------------- !!
    !! This is the first step towards full !!
    !! compatibility with the Promises/A+  !!
    !! spec, at which we will declare this !!